# dali

arduino/1/: 1.ino
arduino/2/: 2.ino
arduino/3/: 3.ino
arduino/4/: 4.ino
internal/: main.py
internal/cpp/: CMakeLists.txt
internal/cpp/include/: app.hpp  arduinoML.hpp  digitalAction.hpp  digitalCondition.hpp  init.hpp  state.hpp  step.hpp
internal/cpp/src/: app.cpp  digitalAction.cpp  digitalCondition.cpp  init.cpp  main.cpp  step.cpp
internal/models/: App.py  NamedElement.py  Signal.py  State.py  Transition.py
internal/models/action/: Action.py  DigitalAction.py
internal/models/brick/: Actuator.py  Analog.py  Brick.py  Digital.py  Sensor.py
internal/models/comparison/: Comparison.py  EdgeComparison.py  SimpleComparison.py
internal/models/condition/: Condition.py  ConstantCondition.py  LogicalOperator.py  Not.py
internal/python/: demo-music.py  demo1.py  demo2.py  demo3.py  demo4.py  main.py  output.ino
internal/python/chaining/: ActionBuilder.py  AppBuilder.py  BrickBuilder.py  ConditionBuilder.py  StateBuilder.py  TransitionBuilder.py  __init__.py
internal/python/dto/: __init__.py  comparisonsDto.py
internal/python/exceptions/: Exceptions.py
internal/python/models/: App.py  Signal.py  State.py  Transition.py  __init__.py
internal/python/models/action/: Action.py  AnalogAction.py  DigitalAction.py  MelodyAction.py  __init__.py
internal/python/models/brick/: Actuator.py  Brick.py  Buzzer.py  Digital.py  DigitalActuator.py  Sensor.py  __init__.py
internal/python/models/comparison/: Comparison.py  EdgeComparison.py  SimpleComparison.py  (+1 more)
(+6 files in other folders)
